<resources>
    <string name="app_name">nicecookrr</string>
    <string name="loading">Loading?</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="facebook_app_id" />
    <string name="fb_login_protocol_scheme">fb</string>
    <string name="facebook_client_token" />
    <string name="lbl_jun">Jun</string>
    <string name="lbl_baked">Baked</string>
    <string name="lbl_enter_passwrod">Enter Passwrod</string>
    <string name="lbl_m">m</string>
    <string name="lbl_250_g">250 g</string>
    <string name="lbl_omcmlaura">\@omcmlaura</string>
    <string name="msg_don_t_have_an_a">Don\u2019t have an account? Sign up</string>
    <string name="msg_confirm_passwor">Confirm Password</string>
    <string name="lbl_s">S</string>
    <string name="msg_by_issabella_et">By Issabella Ethan</string>
    <string name="lbl_t">t</string>
    <string name="msg_search_ingredi">Search  ingredients</string>
    <string name="lbl_w">w</string>
    <string name="msg_pour_3_tablespo">Pour 3 tablespoons of cooking oil into a cooking pot to begin making this meaty stew. Wait for your oil to heat up. Then you can go ahead and add in your 3 cloves of chopped garlic, and 1 chopped onion. Saut? these together nicely.</string>
    <string name="lbl_puree">Puree</string>
    <string name="lbl_flambe">Flambe</string>
    <string name="lbl_retype_password">Retype Password</string>
    <string name="lbl_set">Set</string>
    <string name="lbl_27_50">\u20b127.50</string>
    <string name="lbl_50">50</string>
    <string name="lbl_meal_plan">Meal Plan</string>
    <string name="lbl_filipino">Filipino</string>
    <string name="lbl_procedure">Procedure</string>
    <string name="lbl_local_dishes">Local Dishes</string>
    <string name="lbl_f">f</string>
    <string name="lbl_by_spicy_nelly">By Spicy Nelly</string>
    <string name="lbl_252">\u20b125</string>
    <string name="lbl_step_6">Step 6</string>
    <string name="lbl_step_7">Step 7</string>
    <string name="lbl_step_8">Step 8</string>
    <string name="lbl_step_9">Step 9</string>
    <string name="lbl_step_2">Step 2</string>
    <string name="lbl_step_3">Step 3</string>
    <string name="lbl_step_4">Step 4</string>
    <string name="lbl_step_5">Step 5</string>
    <string name="lbl_step_1">Step 1</string>
    <string name="lbl_recent_search">Recent Search</string>
    <string name="msg_explore_the_pos">Explore the possibilities that ignites culinary curiosity</string>
    <string name="msg_by_miquel_ferra">By Miquel Ferran</string>
    <string name="lbl_sort">Sort</string>
    <string name="lbl_baste">Baste</string>
    <string name="lbl_apr">Apr</string>
    <string name="lbl_pasta">Pasta</string>
    <string name="lbl_30">30</string>
    <string name="lbl_31">31</string>
    <string name="lbl_protein">Protein</string>
    <string name="lbl_search_videos">Search videos</string>
    <string name="lbl_notes">Notes</string>
    <string name="lbl_fruit">Fruit</string>
    <string name="msg_traditional_spa">Traditional spare ribs baked</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_20_mins">20 mins</string>
    <string name="lbl_upload_image">Upload Image</string>
    <string name="lbl_add_button">ADD +</string>
    <string name="msg_pilaf_sweet_wit">Pilaf sweet with lamb-and-raisins</string>
    <string name="lbl_yesterday">Yesterday</string>
    <string name="msg_lorem_ipsum_tem">Lorem Ipsum tempor incididunt ut labore et dolore,in voluptate velit esse cillum dolore eu fugiat nulla pariatur?</string>
    <string name="lbl_jan">Jan</string>
    <string name="msg_lamb_chops_with">Lamb chops with fruity couscous and mint</string>
    <string name="lbl_th">TH</string>
    <string name="lbl_500_g">500 g</string>
    <string name="msg_shipping_charge">Shipping Charges</string>
    <string name="msg_lorem_ipsum_tem2">Lorem Ipsum tempor incididunt ut labore et dolore,in voluptate velit esse cillum dolore eu fugiat nulla pariatur?
Tempor incididunt ut labore et dolore,in voluptate velit esse cillum dolore eu fugiat nulla pariatur?</string>
    <string name="lbl_20">20</string>
    <string name="lbl_category">Category</string>
    <string name="lbl_23">23</string>
    <string name="lbl_english">English</string>
    <string name="lbl_24">24</string>
    <string name="lbl_21">21</string>
    <string name="msg_lorem_ipsum_tem3">Lorem Ipsum tempor incididunt ut labore et dolore,in voluptate velit esse cillum</string>
    <string name="lbl_22">22</string>
    <string name="lbl_27">27</string>
    <string name="lbl_al_dente">Al Dente</string>
    <string name="lbl_28">28</string>
    <string name="lbl_25">25</string>
    <string name="lbl_26">26</string>
    <string name="lbl_dictionary">Dictionary</string>
    <string name="lbl_29">29</string>
    <string name="lbl_502">\u20b150</string>
    <string name="lbl_4_5">4.5</string>
    <string name="lbl_snacks">Snacks</string>
    <string name="lbl_onion">Onion</string>
    <string name="lbl_4_0">4.0</string>
    <string name="lbl_translator">Translator</string>
    <string name="lbl_12">12</string>
    <string name="lbl_13">13</string>
    <string name="lbl_get_started">Get Started</string>
    <string name="lbl_10">10</string>
    <string name="lbl_s2">s</string>
    <string name="lbl_sign_up">Sign up</string>
    <string name="lbl_11">11</string>
    <string name="lbl_sign_up2">Sign Up</string>
    <string name="msg_already_a_membe">Already a member? Sign In</string>
    <string name="lbl_16">16</string>
    <string name="lbl_17">17</string>
    <string name="lbl_14">14</string>
    <string name="lbl_15">15</string>
    <string name="lbl_by_chef_john">By Chef John</string>
    <string name="lbl_caldereta">Caldereta</string>
    <string name="lbl_18">18</string>
    <string name="lbl_19">19</string>
    <string name="lbl_add_category">+ Add Category</string>
    <string name="msg_create_an_accou">Create an account</string>
    <string name="lbl_nadine_lustre">Nadine Lustre</string>
    <string name="lbl_browse_recipes">Browse recipes</string>
    <string name="lbl_appetizers">Appetizers</string>
    <string name="lbl_laura_omcm">Laura Omcm</string>
    <string name="lbl_20_min">20 min</string>
    <string name="msg_accept_terms">Accept terms &amp; Condition</string>
    <string name="msg_classic_greek_s">Classic Greek Salad</string>
    <string name="lbl_asian">Asian</string>
    <string name="lbl_100_g">100 g</string>
    <string name="lbl_or_sign_in_with">Or Sign in With</string>
    <string name="msg_chinese_style_e">Chinese style Egg fried rice with sliced pork fillet</string>
    <string name="lbl_vegetables">Vegetables</string>
    <string name="lbl_enter_email">Enter Email</string>
    <string name="msg_spicy_fried_ric">Spicy fried rice mix chicken bali</string>
    <string name="lbl_285">\u20b1285</string>
    <string name="lbl_add">ADD</string>
    <string name="lbl_welcome_back">Welcome Back!</string>
    <string name="msg_ibuhos_ang_3_ku">Ibuhos ang 3 kutsarang mantika sa kaldero para simulan ang paggawa ng karneng nilagang ito. Hintaying uminit ang iyong mantika. Pagkatapos ay maaari kang magpatuloy at idagdag ang iyong 3 cloves ng tinadtad na bawang, at 1 tinadtad na sibuyas. Igisa ang mga ito nang mabuti.</string>
    <string name="lbl_seafood">Seafood</string>
    <string name="lbl_feb">Feb</string>
    <string name="lbl_enter_name">Enter Name</string>
    <string name="msg_sana_all_lorem">Sana all. Lorem Ipsum tempor incididunt ut labore et dolore,in voluptate velit</string>
    <string name="msg_rice_pilaf_bro">Rice Pilaf, Broccoli and Chicken</string>
    <string name="lbl_upload_video">Upload Video</string>
    <string name="lbl_by_laura_wilson">By laura wilson</string>
    <string name="lbl_sign_in">Sign In</string>
    <string name="lbl_by_mark_kelvin">By Mark Kelvin</string>
    <string name="msg_roasted_ribs_wi">Roasted Ribs with sliced tomatoes and potatoes</string>
    <string name="lbl_may">May</string>
    <string name="lbl_add_step">Add step</string>
    <string name="msg_favorite_recipe">Favorite recipes</string>
    <string name="lbl_add_recipes">Add recipes</string>
    <string name="lbl_by_lucas_moura">By Lucas Moura</string>
    <string name="lbl_30_mins_ago">30 mins ago</string>
    <string name="lbl_302_50">\u20b1302.50</string>
    <string name="msg_forgot_password">Forgot Password?</string>
    <string name="lbl_mar">Mar</string>
    <string name="lbl_hello">Hello,</string>
    <string name="msg_notes_organizat">Notes Organization</string>
    <string name="lbl_1kg">1kg</string>
    <string name="lbl_1_serve">1 serve</string>
    <string name="msg_already_a_membe2">Already a member? </string>
    <string name="lbl_recipe_name">Recipe Name</string>
    <string name="msg_enter_recipe_na">Enter recipe name</string>
    <string name="lbl_dessert">Dessert</string>
    <string name="msg_stir_fry_chicke">Stir-fry chicken with broccoli in sweet and sour sauce and rice.</string>
    <string name="msg_don_t_have_an_a2">Don\u2019t have an account? </string>
    <string name="lbl_encrypted">Encrypted</string>
    <string name="lbl_2028">2028</string>
    <string name="lbl_2027">2027</string>
    <string name="lbl_2026">2026</string>
    <string name="lbl_2025">2025</string>
    <string name="lbl_2024">2024</string>
    <string name="lbl_2023">2023</string>
    <string name="lbl_shopping_list">Shopping list</string>
    <string name="lbl_3_5">3.5</string>
    <string name="lbl_emulsify">Emulsify</string>
    <string name="lbl_332_50">\u20b1332.50</string>
    <string name="lbl_by_laura_wilson2">By Laura wilson</string>
    <string name="lbl_grilled">Grilled</string>
    <string name="msg_copy_recipe_lin">Copy recipe link and share your recipe link with  friends and family.</string>
    <string name="lbl_10_mins_ago">10 mins ago</string>
    <string name="msg_steak_with_toma">Steak with tomato sauce and bulgur rice.</string>
    <string name="msg_simple_way_to_f">Simple way to find Tasty Recipe</string>
    <string name="lbl_search_recipe">Search recipe</string>
    <string name="lbl_time">Time</string>
    <string name="lbl_lagos_nigeria">Lagos, Nigeria</string>
    <string name="lbl_add_ingredient">Add ingredient</string>
    <string name="lbl_enter_password">Enter Password</string>
    <string name="msg_what_are_you_co">What are you cooking today?</string>
    <string name="lbl_breakfast">Breakfast</string>
    <string name="msg_spice_roasted_c">spice roasted chicken with flavored rice</string>
    <string name="lbl_filter">Filter</string>
    <string name="lbl_copy_link">Copy Link</string>
    <string name="lbl_italian">Italian</string>
    <string name="lbl_new_videos">New Videos</string>
    <string name="lbl_filet_mignon">Filet Mignon</string>
    <string name="msg_crunchy_nut_col">Crunchy Nut Coleslaw</string>
    <string name="lbl_oldest">Oldest</string>
    <string name="lbl_13k_reviews">(13k Reviews)</string>
    <string name="lbl_green_chillis">Green Chillis</string>
    <string name="lbl_newest">Newest</string>
    <string name="lbl_10_mins">10 Mins</string>
    <string name="lbl_start_cooking">Start Cooking</string>
    <string name="lbl_calderetades">Kaldereta is a Filipino stew made with goat meat (or other meats) cooked with vegetables and liver paste.</string>
    <string name="msg_nicecookr_recip">NiceCookr.Recipe.co/burgir</string>
    <string name="lbl_total">Total</string>
    <string name="lbl_today">Today</string>
    <string name="lbl_unencrypted">Unencrypted </string>
    <string name="lbl_name">Name</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_recipe_link">Recipe Link </string>
    <string name="lbl_all">All</string>
    <string name="txt_editnote">Edit Note</string>
    <string name="txt_updatenote">Update Note</string>
    <string name="msg_let_s_help_you">Let\u2019s help you set up your account, it won\u2019t take long.</string>
</resources>