<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearSignUp"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumncreateanaccou"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylewhite_A700cornerRadius">
            <TextView android:ellipsize="end"
                android:id="@+id/txtCreateanaccou"
                android:layout_height="wrap_content"
                android:layout_marginEnd="21dp"
                android:layout_marginStart="21dp"
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@string/msg_create_an_accou"
                style="@style/txtPoppinssemibold20" tools:text="@string/msg_create_an_accou"/>
            <TextView android:id="@+id/txtLetshelpyou"
                android:layout_height="wrap_content"
                android:layout_marginEnd="21dp"
                android:layout_marginStart="21dp"
                android:layout_marginTop="5dp"
                android:textSize="12dp"
                android:layout_width="match_parent"
                android:text="@string/msg_let_s_help_you"
                style="@style/txtPoppinsregular11_3" tools:text="@string/msg_let_s_help_you"/>
            <TextView android:ellipsize="end" android:id="@+id/txtLabel"
                android:layout_height="wrap_content"
                android:layout_marginEnd="21dp"
                android:layout_marginStart="21dp"
                android:layout_marginTop="18dp"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@string/lbl_name"
                style="@style/txtPoppinsregular14" tools:text="@string/lbl_name"/>
            <EditText
                android:background="@drawable/rectangle_border_bluegray_100_radius_10"
                android:ellipsize="end"
                android:hint="@string/lbl_enter_name"
                android:id="@+id/txtName" android:inputType="text"
                android:textColor="@color/black_900"
                android:layout_height="wrap_content"
                android:layout_marginEnd="21dp"
                android:layout_marginStart="21dp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:paddingBottom="19dp"
                android:paddingEnd="30dp"
                android:paddingStart="20dp"
                android:paddingTop="18dp"
                android:singleLine="true"
                android:textColorHint="@color/bluegray_100"
                style="@style/etRoundedOutline" tools:ignore="Autofill"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtLabelOne"
                android:layout_height="wrap_content"
                android:layout_marginEnd="21dp"
                android:layout_marginStart="21dp"
                android:layout_marginTop="19dp"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@string/lbl_email"
                style="@style/txtPoppinsregular14" tools:text="@string/lbl_email"/>
            <EditText
                android:background="@drawable/rectangle_border_bluegray_100_radius_10"
                android:ellipsize="end"
                android:hint="@string/lbl_enter_email"
                android:id="@+id/txtEmail"
                android:inputType="textEmailAddress"
                android:textColor="@color/black_900"
                android:layout_height="wrap_content"
                android:layout_marginEnd="21dp"
                android:layout_marginStart="21dp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:paddingBottom="19dp"
                android:paddingEnd="30dp"
                android:paddingStart="20dp"
                android:paddingTop="18dp"
                android:singleLine="true"
                android:textColorHint="@color/bluegray_100"
                style="@style/etRoundedOutline" tools:ignore="Autofill"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtLabelTwo"
                android:layout_height="wrap_content"
                android:layout_marginEnd="21dp"
                android:layout_marginStart="21dp"
                android:layout_marginTop="19dp"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@string/lbl_password"
                style="@style/txtPoppinsregular14" tools:text="@string/lbl_password"/>
            <EditText
                android:background="@drawable/rectangle_border_bluegray_100_radius_10"
                android:ellipsize="end"
                android:hint="@string/lbl_enter_passwrod"
                android:id="@+id/txtPassword" android:inputType="textPassword"
                android:textColor="@color/black_900"
                android:layout_height="wrap_content"
                android:layout_marginEnd="21dp"
                android:layout_marginStart="21dp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:paddingBottom="19dp"
                android:paddingEnd="30dp"
                android:paddingStart="20dp"
                android:paddingTop="18dp"
                android:singleLine="true"
                android:textColorHint="@color/bluegray_100"
                style="@style/etRoundedOutline" tools:ignore="Autofill"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtLabelThree"
                android:layout_height="wrap_content"
                android:layout_marginEnd="21dp"
                android:layout_marginStart="21dp"
                android:layout_marginTop="19dp"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@string/msg_confirm_passwor"
                style="@style/txtPoppinsregular14" tools:text="@string/msg_confirm_passwor"/>
            <EditText
                android:background="@drawable/rectangle_border_bluegray_100_radius_10"
                android:ellipsize="end"
                android:hint="@string/lbl_retype_password"
                android:id="@+id/txtConfirmPassword"
                android:inputType="textPassword"
                android:textColor="@color/black_900"
                android:layout_height="wrap_content"
                android:layout_marginEnd="21dp"
                android:layout_marginStart="21dp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:paddingBottom="18dp"
                android:paddingEnd="30dp"
                android:paddingStart="20dp"
                android:paddingTop="19dp"
                android:singleLine="true"
                android:textColorHint="@color/bluegray_100"
                style="@style/etRoundedOutline" tools:ignore="Autofill"/>
            <LinearLayout android:gravity="center_vertical"
                android:id="@+id/btnSignUp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="21dp"
                android:layout_marginStart="21dp"
                android:layout_marginTop="25dp"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:orientation="horizontal" style="@style/groupStylegray_900cornerRadius">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtLabelFour"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginStart="111dp"
                    android:layout_marginTop="19dp"
                    android:gravity="center"
                    android:layout_weight="0.82"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@string/lbl_sign_up2"
                    style="@style/txtPoppinssemibold16_1" tools:text="@string/lbl_sign_up2"/>
                <ProgressBar
                    android:id="@+id/progressBar"
                    android:visibility="gone"
                    android:layout_gravity="center"
                    android:paddingVertical="6dp"
                    android:indeterminateTint="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <ImageView android:id="@+id/imageArrowright"
                    android:layout_height="11dp"
                    android:layout_marginBottom="24dp"
                    android:layout_marginEnd="88dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="24dp"
                    android:layout_width="13dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_arrowright"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_arrowright"/>
            </LinearLayout>

            <TextView android:ellipsize="end"
                android:id="@+id/txtSignIn"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginBottom="29dp"
                android:layout_marginEnd="21dp"
                android:layout_marginStart="21dp"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@string/msg_already_a_membe"
                style="@style/txtPoppinsmedium11_1" tools:text="@string/msg_already_a_membe"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>