<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NotesFragment">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="143dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_all"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="53dp"
        android:layout_height="27dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="181dp"
        android:layout_marginBottom="18dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/lbl_notes"
        android:textColor="@color/black_12"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_encrypted"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_unencrypted"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginEnd="49dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/lbl_unencrypted"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#4C2609"
        android:textSize="11sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_encrypted"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_encrypted" />

    <Button
        android:id="@+id/btn_all"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="107dp"
        android:layout_height="38dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="61dp"
        android:layout_marginBottom="56dp"
        android:backgroundTint="#4C2609"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/lbl_all"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="#FFFFFF"
        android:textSize="11sp"
        app:layout_constraintBottom_toTopOf="@+id/recyclerListcaldereta"
        app:layout_constraintEnd_toStartOf="@+id/btn_encrypted"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_encrypted"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="107dp"
        android:layout_height="38dp"
        android:layout_marginBottom="14dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/lbl_encrypted"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#4C2609"
        android:textSize="11sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/btn_unencrypted"
        app:layout_constraintStart_toEndOf="@+id/btn_all"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:layout_marginBottom="14dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/lbl_today"
        android:textColor="@color/black_12"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/recyclerListcaldereta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_encrypted" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerListcaldereta"

        android:layout_width="334dp"
        android:layout_height="223dp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="358dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.888"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_all"
        tools:ignore="MissingConstraints"
        tools:itemCount="2"
        tools:listitem="@layout/notes_card" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="143dp"
        android:layout_marginEnd="143dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/lbl_yesterday"
        android:textColor="#121212"
        app:layout_constraintBottom_toTopOf="@+id/recyclerListnewyorkstrip"
        app:layout_constraintEnd_toEndOf="@+id/recyclerListcaldereta"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/recyclerListcaldereta" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerListnewyorkstrip"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="84dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="MissingConstraints"
        tools:itemCount="2"
        tools:listitem="@layout/notes_card" />
</androidx.constraintlayout.widget.ConstraintLayout>